--- a/.gitignore
+++ b/.gitignore
@@ -7,28 +7,36 @@ yarn-error.log
 # Environment variables
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*.local
 
-# Build files
-dist/
-build/
-out/
-
-# IDE and editor files
+# IDE
 .idea/
 .vscode/
 *.swp
 *.swo
+
+# OS
 .DS_Store
+Thumbs.db
+
+# Build
+/dist
+/build
+
+# Output
+out/
 
 # Logs
 logs/
 *.log
 
+# Database
+*.sqlite
+*.db
+
 # Testing
 coverage/
+.nyc_output/
 
 # Temporary files
 tmp/
