--- a/backend/package.json
+++ b/backend/package.json
@@ -18,12 +18,13 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^4.17.1",
+    "express": "^4.21.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "nodemailer": "^6.9.9",
     "path": "^0.12.7",
+    "path-to-regexp": "^8.2.0",
     "resend": "^4.4.0"
   },
   "devDependencies": {
