--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "autoparts-b2b",
+  "name": "static-site-kopia",
   "version": "1.0.0",
-  "description": "AutoParts B2B Platform",
+  "description": "B2B Auto Parts Platform",
   "main": "backend/server.js",
   "scripts": {
     "start": "node backend/server.js",
-    "dev": "nodemon backend/server.js"
+    "dev": "nodemon backend/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "body-parser": "^1.20.2",
-    "resend": "^2.0.0",
+    "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.0.3"
+    "resend": "^2.0.0",
+    "path-to-regexp": "^6.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
