--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
   "scripts": {
     "start": "node backend/server.js",
     "dev": "nodemon backend/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "build": "echo 'No build step required'"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.3.1",
-    "jsonwebtoken": "^9.0.2",
-    "resend": "^2.0.0",
-    "path-to-regexp": "^6.2.1"
+    "dotenv": "^16.0.3",
+    "jsonwebtoken": "^9.0.0",
+    "resend": "^1.0.0",
+    "body-parser": "^1.20.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^2.0.22",
+    "jest": "^29.5.0"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
